freshed-rs-macros/tests/ui/fail/html_in_missing_context.rs
use freshed_rs_macros::html_in;

fn main() {
    let _ = html_in!(<div>oops</div>);
}
