freshed-rs-macros/tests/ui/fail/html_in_missing_context.stderr
error: html_in! expects input in the form: context_expr, <markup...>
 --> tests/ui/fail/html_in_missing_context.rs:4:13
  |
4 |     let _ = html_in!(<div>oops</div>);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `html_in` (in Nightly builds, run with -Z macro-backtrace for more info)
